# ReverseTool

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  install.sh  justfile  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  extractor_proposal.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pip-audit.yml  release.yml
docker/: Dockerfile  docker-compose.dev.yml  entrypoint.sh
docs/: backends.md  custom-extractors.md  docker.md  installation.md  output-formats.md
docs/superpowers/plans/: 2026-04-01-phase1-core-framework.md  2026-04-01-phase2-extractors.md  2026-04-01-phase3-docker.md  2026-04-01-phase4-cicd-opensource.md
docs/superpowers/specs/: 2026-04-01-reverse-tool-unified-design.md
scripts/: reverse-tool-docker
src/reverse_tool/: __init__.py  __main__.py  _typing.py  cli.py  config.py  discovery.py  engine.py  exceptions.py
src/reverse_tool/backends/: __init__.py  _base.py  ghidra.py  idapro.py  null.py  radare2.py
src/reverse_tool/extractors/: __init__.py  _base.py  _ghidra_runner.py  _idapro_runner.py  _utils.py
src/reverse_tool/extractors/function_call/: __init__.py  _ghidra.py  _idapro.py  _radare2.py  _writer.py
src/reverse_tool/extractors/function_call/_scripts/: ghidra_function_call.py  idapro_function_call.py
src/reverse_tool/extractors/opcode/: __init__.py  _ghidra.py  _idapro.py  _radare2.py  _writer.py
src/reverse_tool/extractors/opcode/_scripts/: ghidra_opcode.py  idapro_opcode.py  r2_timeout_check.sh
tests/: conftest.py
tests/unit/: test_backends.py  test_cli.py  test_config.py  test_discovery.py  test_engine.py  test_exceptions.py  test_extractors.py  test_funcall_extractor.py  test_ghidra_backend.py  test_idapro_backend.py  test_opcode_extractor.py  test_radare2_backend.py
tests/unit/writers/: test_csv_writer.py  test_dot_writer.py  test_json_writer.py
